task-1/manifests/ingress.yml
# Ingress manifest for backend service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bow
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /bow/api/v1
        pathType: ImplementationSpecific
        backend:
          service:
            name: bow
            port:
              number: 80
---
# Ingress manifest for frontend service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bow-ui
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: bow-ui
            port:
              number: 80
